# fiscal-helper

./: .gitignore  LICENCE.md  LICENSE.md  Makefile  __init__.py  buildsteps.md  buildsteps.txt  fiscal_calendar.csv  main.py  pyproject.toml  readme.md  todo.md
fiscal_calendar_helper/: __init__.py  create_fiscal_calendar.py  fiscal_calendar.csv  fiscal_calendar.py  helper.py
fiscal_helper/: fiscal_helper.py
tests/: package_test.py  quick_debug.py  test_next.py  test_previous.py
