[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiscal-calendar-helper"
version = "1.2.2"
authors = [
  { name="Phillip Geltman"},
]
description = "A fiscal helper for retail calendars"
readme = "README.md"
license = { file="LICENSE.md" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.1"
]

[project.urls]
homepage = "https://github.com/Growthsayer/fiscal-helper"
bug_tracker = "https://github.com/Growthsayer/fiscal-helper/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "Makefile",
    "buildsteps.md",
    "todo.md",
    "htmlcov",
    ".gitignore",
    "__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "*.tmp",
    "*.bak",
    "*.swp",
    "*.lock",
    "*.log",
    ".DS_Store",
    "tests",
]
